--- a/data/schema/units/single.cfg
+++ b/data/schema/units/single.cfg
@@ -14,7 +14,7 @@
 	{SIMPLE_KEY level s_int}
 	{SIMPLE_KEY upkeep upkeep}
 	{SIMPLE_KEY recall_cost s_int}
-	{SIMPLE_KEY overlays string_list}
+	{SIMPLE_KEY mp_overlays string_list}
 	{SIMPLE_KEY max_hitpoints s_int}
 	{SIMPLE_KEY max_experience s_int}
 	{SIMPLE_KEY max_moves s_int}
@@ -34,6 +34,7 @@
 	{SIMPLE_KEY usage ai_usage}
 	{SIMPLE_KEY zoc s_bool}
 	{SIMPLE_KEY ellipse string}
+    {SIMPLE_KEY overlays string}
 	{DEPRECATED_KEY ai_special string} # Not documented
 	{SIMPLE_KEY description t_string} # Not documented
 	{SIMPLE_KEY flag_icon string} # Not documented
