--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -155,7 +155,7 @@
 				{LINK_TAG "units/unit_type/extra_anim"}
 			[/case]
 			[case]
-				value=image_mod,overlays
+				value=image_mod,overlay
 				{SIMPLE_KEY replace string}
 				{SIMPLE_KEY add string}
 				{LINK_TAG "game_config/color_range"}
@@ -166,7 +166,7 @@
 				{SIMPLE_KEY ellipse string}
 			[/case]
             [case]
-				value=overlay
+				value=sp_overlay
 				{SIMPLE_KEY overlay string}
 			[/case]
 			[case]
