replace unit_overlay buy unit_mp_overlay

--- a/data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg
+++ b/data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg
@@ -240,11 +240,11 @@
                     y=8
                 [/filter]
                 [then]
-                    [unit_overlay]
+                    [unit_mp_overlay]
                         x=15
                         y=8
                         image=overlays/arcane-icon.png
-                    [/unit_overlay]
+                    [/unit_mp_overlay]
                     [remove_item]
                         x,y=15,8
                     [/remove_item]
