replace unit_overlay by unit_mp_overlay

--- a/data/campaigns/Dead_Water/utils/items.cfg
+++ b/data/campaigns/Dead_Water/utils/items.cfg
@@ -17,11 +17,11 @@
             y={Y}
         [/filter]
         [then]
-            [unit_overlay]
+            [unit_mp_overlay]
                 x={X}
                 y={Y}
                 image=overlays/storm-trident-icon.png
-            [/unit_overlay]
+            [/unit_mp_overlay]
             [remove_item]
                 x={X}
                 y={Y}
@@ -60,11 +60,11 @@
             y={Y}
         [/filter]
         [then]
-            [unit_overlay]
+            [unit_mp_overlay]
                 x={X}
                 y={Y}
                 image=overlays/flame-sword-icon.png
-            [/unit_overlay]
+            [/unit_mp_overlay]
             [remove_item]
                 x={X}
                 y={Y}
@@ -98,11 +98,11 @@
             y={Y}
         [/filter]
         [then]
-            [unit_overlay]
+            [unit_mp_overlay]
                 x={X}
                 y={Y}
                 image=overlays/arcane-icon.png
-            [/unit_overlay]
+            [/unit_mp_overlay]
             [remove_item]
                 x={X}
                 y={Y}
@@ -313,11 +313,11 @@
                         y=$ring_y
                     [/filter]
                     [then]
-                        [unit_overlay]
+                        [unit_mp_overlay]
                             x=$ring_x
                             y=$ring_y
                             image=overlays/silver-ring-icon.png
-                        [/unit_overlay]
+                        [/unit_mp_overlay]
                         [remove_item]
                             x=$ring_x
                             y=$ring_y
