replace unit_overlay by unit_mp_overlay

--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -255,10 +255,10 @@
 
         {CLEAR_VARIABLE hasBook}
 
-        [unit_overlay]
+        [unit_mp_overlay]
             id=Darken Volk
             image="misc/book-icon.png"
-        [/unit_overlay]
+        [/unit_mp_overlay]
 
         {MODIFY_UNIT (id=Darken Volk) facing ne}
 
@@ -791,10 +791,10 @@
             role=book_carrier
         [/role]
 
-        [unit_overlay]
+        [unit_mp_overlay]
             x,y=$x1,$y1
             image="misc/book-icon.png"
-        [/unit_overlay]
+        [/unit_mp_overlay]
 
         [if]
             [have_unit]
@@ -907,10 +907,10 @@
             [/filter_location]
         [/filter]
 
-        [remove_unit_overlay]
+        [remove_unit_mp_overlay]
             role=book_carrier
             image="misc/book-icon.png"
-        [/remove_unit_overlay]
+        [/remove_unit_mp_overlay]
 
         {MOVE_UNIT (id=Malin Keshar) 1 8}
 
