--- a/data/campaigns/Sceptre_of_Fire/scenarios/4_Gathering_Materials.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/4_Gathering_Materials.cfg
@@ -688,10 +688,10 @@
             variable=unit
             find_vacant=no
         [/unstore_unit]
-        [unit_overlay]
+        [unit_mp_overlay]
             x,y=$x1,$y1
             image=misc/coal-icon.png
-        [/unit_overlay]
+        [/unit_mp_overlay]
         [remove_item]
             x,y=$x1,$y1
         [/remove_item]
@@ -725,10 +725,10 @@
             variable=unit
             find_vacant=no
         [/unstore_unit]
-        [unit_overlay]
+        [unit_mp_overlay]
             x,y=$x1,$y1
             image=misc/coal-icon.png
-        [/unit_overlay]
+        [/unit_mp_overlay]
         [remove_item]
             x,y=$x1,$y1
         [/remove_item]
@@ -782,10 +782,10 @@
             variable=unit
             find_vacant=no
         [/unstore_unit]
-        [unit_overlay]
+        [unit_mp_overlay]
             x,y=$x1,$y1
             image=misc/gold-icon.png
-        [/unit_overlay]
+        [/unit_mp_overlay]
         [remove_item]
             x,y=$x1,$y1
         [/remove_item]
@@ -849,10 +849,10 @@
                     find_vacant=no
                 [/unstore_unit]
 
-                [unit_overlay]
+                [unit_mp_overlay]
                     x,y=$x1,$y1
                     image=misc/coal-icon.png
-                [/unit_overlay]
+                [/unit_mp_overlay]
 
                 [remove_item]
                     x,y=$x1,$y1
@@ -923,10 +923,10 @@
                     find_vacant=no
                 [/unstore_unit]
 
-                [unit_overlay]
+                [unit_mp_overlay]
                     x,y=$x1,$y1
                     image=misc/gold-icon.png
-                [/unit_overlay]
+                [/unit_mp_overlay]
 
                 [remove_item]
                     x,y=$x1,$y1
@@ -964,10 +964,10 @@
             find_vacant=no
         [/unstore_unit]
 
-        [remove_unit_overlay]
+        [remove_unit_mp_overlay]
             x,y=$x1,$y1
             image=misc/coal-icon.png
-        [/remove_unit_overlay]
+        [/remove_unit_mp_overlay]
 
         [set_variable]
             name=coalin
@@ -1029,10 +1029,10 @@
             find_vacant=no
         [/unstore_unit]
 
-        [remove_unit_overlay]
+        [remove_unit_mp_overlay]
             x,y=$x1,$y1
             image=misc/gold-icon.png
-        [/remove_unit_overlay]
+        [/remove_unit_mp_overlay]
 
         [set_variable]
             name=goldin
