--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
@@ -240,10 +240,10 @@
             id=Commander Aethyr
         [/recall]
 
-        [unit_overlay]
+        [unit_mp_overlay]
             id=Commander Aethyr
             image=misc/treaty-icon.png
-        [/unit_overlay]
+        [/unit_mp_overlay]
 
         {LIVING_INTEL (Familiar) (Familiar) ( _ "Familiar") "portraits/familiar.png" 2 40 39}
         # wmllint: whofield clear LIVING_INTEL
