--- a/data/campaigns/Under_the_Burning_Suns/utils/dehydration-utils.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/utils/dehydration-utils.cfg
@@ -136,10 +136,10 @@ Hd, Dd*, Dd^E*, Rd #enddef
                         {COLOR_HARM}
                     [/unstore_unit]
 
-                    [unit_overlay]
+                    [unit_mp_overlay]
                         x,y=$dehydrating_units[$i].x,$dehydrating_units[$i].y
                         image=misc/dehydration-icon.png
-                    [/unit_overlay]
+                    [/unit_mp_overlay]
                 [/else]
             [/if]
         [/do]
@@ -188,10 +188,10 @@ Hd, Dd*, Dd^E*, Rd #enddef
                 {COLOR_HEAL}
             [/unstore_unit]
 
-            [remove_unit_overlay]
+            [remove_unit_mp_overlay]
                 x,y=$hydrating_units[$i].x,$hydrating_units[$i].y
                 image=misc/dehydration-icon.png
-            [/remove_unit_overlay]
+            [/remove_unit_mp_overlay]
         [/do]
     [/for]
 
@@ -282,10 +282,10 @@ Hd, Dd*, Dd^E*, Rd #enddef
             advance=no
         [/unstore_unit]
 
-        [remove_unit_overlay]
+        [remove_unit_mp_overlay]
             x,y=$unit.x,$unit.y
             image=misc/dehydration-icon.png
-        [/remove_unit_overlay]
+        [/remove_unit_mp_overlay]
     [/event]
 
     [event]
@@ -329,10 +329,10 @@ Hd, Dd*, Dd^E*, Rd #enddef
                     find_vacant=no
                 [/unstore_unit]
 
-                [remove_unit_overlay]
+                [remove_unit_mp_overlay]
                     id=$hydrating_units[$i].id
                     image=misc/dehydration-icon.png
-                [/remove_unit_overlay]
+                [/remove_unit_mp_overlay]
             [/do]
         [/for]
 
