statistics_dialog: Fix wrong uses of linked_group
Remove extraneous columns, add grids in the bottom two tables where it's
needed for two columns to match the width of one column of the first
table.

--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -150,32 +150,8 @@
 
 					[label]
 						definition = "default_small"
-						label = "" # percentage
-						linked_group = "detail"
-					[/label]
-				[/column]
-
-				[column]
-					horizontal_grow = true
-					border = "all"
-					border_size = 5
-
-					[label]
-						definition = "default_small"
 						label = _ "This Turn"
 						linked_group = "cost"
-					[/label]
-				[/column]
-
-				[column]
-					horizontal_grow = true
-					border = "all"
-					border_size = 5
-
-					[label]
-						definition = "default_small"
-						label = "" # percentage
-						linked_group = "detail"
 					[/label]
 				[/column]
 
@@ -201,7 +177,7 @@
 								[column]
 									grow_factor = 1
 									border = "all"
-									border_size = 5
+									border_size = 0
 									horizontal_grow = true
 
 									[label]
@@ -211,65 +187,95 @@
 									[/label]
 								[/column]
 
-								[column]
-									grow_factor = 1
-									border = "all"
-									border_size = 5
-									horizontal_grow = true
+                                [column]
+                                    grow_factor = 1
+                                    border = "all"
+                                    border_size = 0
+                                    horizontal_grow = true
+                                    [grid]
+                                        linked_group = "detail"
+                                        [row]
 
-									[label]
-										id = {colid_overall}
-										definition = "default_small"
-										linked_group = "detail"
-										tooltip = {ratio_tooltip}
-									[/label]
-								[/column]
+                                            [column]
+                                                grow_factor = 1
+                                                border = "all"
+                                                border_size = 5
+                                                horizontal_grow = true
 
-								[column]
-									grow_factor = 0
-									border = "all"
-									border_size = 5
-									horizontal_grow = false
+                                                [label]
+                                                    id = {colid_overall}
+                                                    definition = "default_small"
+                                                    tooltip = {ratio_tooltip}
+                                                [/label]
+                                            [/column]
 
-									[label]
-										id = "overall_percent"
-										definition = "default_small"
-										linked_group = "detail"
-										text_alignment = "right"
-										use_markup = true
-										tooltip = {percent_tooltip}
-									[/label]
-								[/column]
+                                            [column]
+                                                grow_factor = 0
+                                                border = "all"
+                                                border_size = 5
+                                                horizontal_grow = false
 
-								[column]
-									grow_factor = 1
-									border = "all"
-									border_size = 5
-									horizontal_grow = true
+                                                [label]
+                                                    id = "overall_percent"
+                                                    definition = "default_small"
+                                                    text_alignment = "right"
+                                                    use_markup = true
+                                                    tooltip = {percent_tooltip}
+                                                [/label]
+                                            [/column]
 
-									[label]
-										id = {colid_this_turn}
-										definition = "default_small"
-										linked_group = "cost"
-										tooltip = {ratio_tooltip}
-									[/label]
-								[/column]
+                                            [column]
 
-								[column]
-									grow_factor = 0
-									border = "all"
-									border_size = 5
-									horizontal_grow = false
+                                                # Spacer to make up for showing only one percentage, not two as in the next table
+                                                [spacer]
+                                                    width=10 # TODO: Wild guess. Feel free to adjust
+                                                [/spacer]
+                                            [/column]
 
-									[label]
-										id = "this_turn_percent"
-										definition = "default_small"
-										linked_group = "detail"
-										text_alignment = "right"
-										use_markup = true
-										tooltip = {percent_tooltip}
-									[/label]
-								[/column]
+                                        [/row]
+                                    [/grid]
+                                [/column]
+
+                                [column]
+                                    grow_factor = 1
+                                    border = "all"
+                                    border_size = 0
+                                    horizontal_grow = true
+                                    [grid]
+                                        linked_group = "cost"
+                                        [row]
+
+                                            [column]
+                                                grow_factor = 1
+                                                border = "all"
+                                                border_size = 5
+                                                horizontal_grow = true
+
+                                                [label]
+                                                    id = {colid_this_turn}
+                                                    definition = "default_small"
+                                                    tooltip = {ratio_tooltip}
+                                                [/label]
+                                            [/column]
+
+                                            [column]
+                                                grow_factor = 0
+                                                border = "all"
+                                                border_size = 5
+                                                horizontal_grow = false
+
+                                                [label]
+                                                    id = "this_turn_percent"
+                                                    definition = "default_small"
+                                                    text_alignment = "right"
+                                                    use_markup = true
+                                                    tooltip = {percent_tooltip}
+                                                [/label]
+                                            [/column]
+
+                                        [/row]
+                                    [/grid]
+                                [/column]
 
 							[/row]
 
