--- a/data/gui/window/statistics_dialog.cfg
+++ b/data/gui/window/statistics_dialog.cfg
@@ -565,7 +565,7 @@
 											{_GUI_DAMAGE_STATS_LIST
 											 (_ "Hits") stats_list_hits hits_type hits_overall hits_this_turn
 											 (_"stats dialog^Number of hits (actual / expected)")
-											 (_"stats dialog^<i>A priori</i> probability of getting this result or a more extreme one")}
+											 (_"stats dialog^<i>A priori</i> probabilities of hitting less than, exactly, and more than the actual number of hits")}
 										[/column]
 
 									[/row]
